# dotfiles

./: .codespell-ignore-words  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  config.md  flake.nix  install.sh  installation_note.md  out  pyproject.toml  result  task.md  test-secret.txt  test.sh  userdata.nix
.git-hooks/: README.md  pre-commit-secrets
.github/: copilot-instructions.md
Xresources/: .Xresources
cron/: install.sh
docs/: Guideline for configure software.md  Linux Todo List.md  asahi_linux.md  brightness-ddcci.md  config.md  flake-cache-misses.md  hermetic-configuration.md  installation_note.md  signal-bridge.md  tailscale.md  test-vm.md  theme.md  xdg-portal-troubleshooting.md
dunst/: dunstrc
dwm/: README.md
nix/theme-manager/: README.md  hm-module.nix  package.nix  pyproject.toml
nix/theme-manager/src/theme_manager/: daemon.py  runtime.py  tray.py
nix/theme-manager/src/themectl/: __init__.py  main.py
notion/: notion-customcss-1_forReddit.css
ranger/: install.sh
scripts/: ags-reload.sh  check-cache.sh  collect_configs.sh  delete_old_generation.sh  deploy-workflow.sh  dotfiles.txt  download-n8n-workflows.sh  flake_input_versions.py  move.sh  query.sh  setup-git-hooks.sh  switch.py  switch.sh  test_nvim_snacks_nil.sh  theme-switch.sh  update-vscode-extensions.py  update_inputs.py  vscode-extensions.sh  vscode-extensions.txt  vscode_extension.py
secrets/: README.md  age.pub  global.yaml  hyprpanel.yaml  system.yaml  user.yaml
task/: .taskrc
tmux/: .tmux.conf
workflows/: .gitignore  README.md  (+2 more)
(+879 files in other folders)
